# clown_vision

./: .gitignore  README.md  main.py  presentation.md  pyproject.toml  requirements.txt
clown_vision/: __init__.py  cli.py  config.py  denoising.py  descriptors.py  features.py  local_features.py  preprocessing.py  rescue.py  ui.py  untangle.py  utils.py
scripts/: run_ui.py
tests/: test.ipynb  test_cli.py  test_denoise.py  test_enhanced_untangle.py  test_features.py  test_harr.py  test_processing.py  test_rescue.py
